Drobne poprawki w widoku książki

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,3 +28,11 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+// Ustawiamy kolor linkow na zielony
+@linkColor: #005A26;
+
+// Zmieniamy kolor tla na szary
+//body {
+//  background: grey;
+//}
