--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,20 +11,26 @@
     </div>
   <% end %>
 
+	<p>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.text_field :email, 'disabled' => !@user.id.nil? %>
   </div>
-  
+  </p>
+
+	<p>
   <div class="field">
-    <%= f.label :is_superadmin %><br />
+    <%= f.label :is_superadmin %>
     <%= f.check_box :is_superadmin %>
   </div>
-  
+  </p>
+
+	<p>
   <div class="field">
-    <%= f.label :is_blocked %><br />
+    <%= f.label :is_blocked %>
     <%= f.check_box :is_blocked %>
   </div>
+	</p>
 
   <div class="actions">
     <%= f.submit %>
