Zmiany w UI - navbar, mniej linii w tabeli

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,6 +33,6 @@
 @linkColor: #005A26;
 
 // Zmieniamy kolor tla na szary
-//body {
-//  background: grey;
-//}
+//@bodyBackground: #eee;
+//@tableBorder: #eee;
+//@tableBorder: @white;
