--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,14 +1,14 @@
-<div class="row">
-  <div class="span12">
-    <ul class="nav nav-pills">
-      <li class=""><%= link_to root_path, class: 'muted' do %> <i class='icon-home'></i> ZiHeR <% end %></li>
+<div class="navbar">
+  <div class="navbar-inner">
+    <ul class="nav">
+      <li class=""><%= link_to root_path do %> <i class='icon-home'></i> ZiHeR <% end %></li>
 
-      <li class=""><%= link_to "Książka finansowa", default_finance_journal_path, class: "muted" %></li>
-      <li class=""><%= link_to "Książka bankowa", default_bank_journal_path, class: "muted" %></li>
+      <li class="<%= 'active' if current_page?(controller: 'journals', action: 'show') %>"><%= link_to "Książka finansowa", default_finance_journal_path %></li>
+      <li class="<%= 'active' if current_page?(controller: 'journals', action: 'show') %>"><%= link_to "Książka bankowa", default_bank_journal_path %></li>
 
-      <li class="<%= 'active' if current_page?(inventory_entries_path) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path, class: "muted" %> </li>
+      <li class="<%= 'active' if current_page?(inventory_entries_path) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
       <li class="dropdown">
-        <a class="dropdown-toggle muted" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li class="<%= 'active' if current_page?(units_path) %>"> <%= link_to "Drużyny", units_path %> </li>
           <li class="<%= 'active' if current_page?(groups_path) %>"> <%= link_to "Grupy", groups_path %> </li>
@@ -18,16 +18,18 @@
           <% if current_user != nil && current_user.can_manage_any_user %><li class="<%= 'active' if current_page?(users_path) %>"> <%= link_to "Użytkownicy", users_path %> </li><% end %>
         </ul>
       </li>
+    </ul>
 
-      <% if user_signed_in? %>
-        <li class="pull-right">
-          <%= link_to destroy_user_session_path, :method => :delete, class: "muted" do %>
+    <% if user_signed_in? %>
+      <ul class="nav pull-right">
+        <li>
+          <%= link_to destroy_user_session_path, :method => :delete do %>
             <%= current_user.email %> - <i class='icon-off'></i>&nbsp;Wyloguj się
           <%end%>
         </li>
-      <% end %>
+      </ul>
+    <% end %>
 
-    </ul>
   </div>
 </div>
 
