--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -3,21 +3,23 @@
     <ul class="nav">
       <li class=""><%= link_to root_path do %> <i class='icon-home'></i> ZiHeR <% end %></li>
 
-      <li class="active"><%= link_to "Książka finansowa", default_finance_journal_path %></li>
-      <li class=""><%= link_to "Książka bankowa", default_bank_journal_path %></li>
+      <% if user_signed_in? %>
+        <li class="active"><%= link_to "Książka finansowa", default_finance_journal_path %></li>
+        <li class=""><%= link_to "Książka bankowa", default_bank_journal_path %></li>
 
-      <li class="<%= 'active' if current_page?(inventory_entries_path) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li class="<%= 'active' if current_page?(units_path) %>"> <%= link_to "Drużyny", units_path %> </li>
-          <li class="<%= 'active' if current_page?(groups_path) %>"> <%= link_to "Grupy", groups_path %> </li>
-          <% if can? :manage, Category %><li class="<%= 'active' if current_page?(categories_path) %>"> <%= link_to "Kategorie", categories_path %> </li><% end %>
-          <% if can? :manage, Journal %><li class="<%= 'active' if current_page?(journals_path) %>"> <%= link_to "Książki", journals_path %> </li><% end %>
-          <% if can? :manage, JournalType %><li class="<%= 'active' if current_page?(journal_types_path) %>"> <%= link_to "Rodzaje książek", journal_types_path %> </li><% end %>
-          <% if current_user != nil && current_user.can_manage_any_user %><li class="<%= 'active' if current_page?(users_path) %>"> <%= link_to "Użytkownicy", users_path %> </li><% end %>
-        </ul>
-      </li>
+        <li class="<%= 'active' if current_page?(inventory_entries_path) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li class="<%= 'active' if current_page?(units_path) %>"> <%= link_to "Drużyny", units_path %> </li>
+            <li class="<%= 'active' if current_page?(groups_path) %>"> <%= link_to "Grupy", groups_path %> </li>
+            <% if can? :manage, Category %><li class="<%= 'active' if current_page?(categories_path) %>"> <%= link_to "Kategorie", categories_path %> </li><% end %>
+            <% if can? :manage, Journal %><li class="<%= 'active' if current_page?(journals_path) %>"> <%= link_to "Książki", journals_path %> </li><% end %>
+            <% if can? :manage, JournalType %><li class="<%= 'active' if current_page?(journal_types_path) %>"> <%= link_to "Rodzaje książek", journal_types_path %> </li><% end %>
+            <% if current_user != nil && current_user.can_manage_any_user %><li class="<%= 'active' if current_page?(users_path) %>"> <%= link_to "Użytkownicy", users_path %> </li><% end %>
+          </ul>
+        </li>
+      <% end %>
     </ul>
 
     <% if user_signed_in? %>
