--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,8 +1,12 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Droga posiadaczko i drogi posiadaczu adresu e-mail <%= @resource.email %>!</p>
 
-<p>Someone has invited you to <%= root_url %>, you can accept it through the link below.</p>
+<p>Ta wiadomość jest zaproszeniem do aplikacji ZiHeR znajdującej się pod adresem <%= root_url %>. Aby zaakceptować zaproszenie, kliknij w link poniżej:</p>
 
-<p><%= link_to 'Accept invitation', accept_invitation_url(@resource, :invitation_token => @resource.invitation_token) %></p>
+<p><%= link_to 'Akceptuję zaproszenie, bo wiem jak ważne jest poprawne wypełnianie książki finansowej drużyny', accept_invitation_url(@resource, :invitation_token => @resource.invitation_token) %></p>
 
-<p>If you don't want to accept the invitation, please ignore this email.<br />
-Your account won't be created until you access the link above and set your password.</p>
+<p>Jeśli nie chcesz akceptować zaproszenia, nie chcesz poczuć radości płynącej z poprawnego wypełniania tabelek, albo po prostu porozumiewasz się w języku innym niż polski, nie klikaj w powyższy link.</p>
+
+<p>Czuwaj!</p>
+
+<p>Z uszanowaniem,<br/>
+Zespół ZiHeR</p>
