Zmiany paska wyboru książki / dodania i usuwania wpisów: trochę więcej przestrzeni i rozszerzone pole wyboru drużyny

--- a/app/assets/stylesheets/journals.css.scss
+++ b/app/assets/stylesheets/journals.css.scss
@@ -8,3 +8,11 @@
 .border-top-bold {
   border-top: 3px solid #ddd;
 }
+
+.top-buffer-20 {
+  margin-top:20px;
+}
+
+.top-buffer-40 {
+  margin-top:40px;
+}
