--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row top-buffer-40">
   <div class="span6">
     <div class='pull-left'>
       <small>
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<table class="table table-condensed">
+<table class="table table-condensed top-buffer-20">
 
   <thead>
     <tr>
