--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -43,8 +43,8 @@
       <th rowspan="2" class="valign_middle text-center"><small>Data</small></th>
       <th rowspan="2" class="valign_middle text-center"><small>Treść</small></th>
       <th colspan="<%= @categories_income.count %>" class="text-center"><small>Wpływy szczegółowo</small></th>
-      <th rowspan="2" class="income income_all valign_middle"><small>Wpływy razem</small></th>
-      <th rowspan="2" class="expense expense_all valign_middle"><small>Wydatki razem</small></th>
+      <th rowspan="2" class="income income_all valign_middle text-center"><small>Wpływy razem</small></th>
+      <th rowspan="2" class="expense expense_all valign_middle text-center"><small>Wydatki razem</small></th>
       <th colspan="<%= @categories_expense.count %>" class="text-center"><small>Wydatki szczegółowo</small></th>
     </tr>
 
