--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -7,7 +7,7 @@
         <li class="<%= menu_active?(:journal_finance) %>"><%= link_to "Książka finansowa", default_finance_journal_path %></li>
         <li class="<%= menu_active?(:journal_bank) %>"><%= link_to "Książka bankowa", default_bank_journal_path %></li>
 
-        <li class="<%= menu_active?(:journal_inventory) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
+        <li class="<%= menu_active?(:inventory) %>"> <%= link_to "Książka inwentarzowa", inventory_entries_path %> </li>
         <li class="dropdown <%= menu_active?(:administration_dropdown) %>">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Administracja <b class="caret"></b></a>
           <ul class="dropdown-menu">
