Wpisy w książce inwentarzowej mają teraz pole 'Wartość' zamiast 'Cena jednostkowa' - jest to spowodowane tym, że czasem cena jednostkowa wychodzi niewymierna (gdy np. dostaliśmy rabat na namioty i 3 sztuki kupiliśmy za 1000 pln zamiast 1200 pln). Zonk.

--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -26,12 +26,12 @@
         <%= f.text_field :document_number %>
       </div>
       <div class="field">
-        <%= f.label :wartość %>
+        <%= f.label :ilość %>
         <%= f.number_field :amount %>
       </div>
       <div class="field">
-        <%= f.label :cena_jednostkowa %>
-        <%= f.text_field :unit_price %>
+        <%= f.label :wartość%>
+        <%= f.text_field :total_value %>
       </div>
       <div class="field">
         <%= f.label :Źródło %>
