--- a/app/views/inventory_entries/show.html.erb
+++ b/app/views/inventory_entries/show.html.erb
@@ -16,13 +16,13 @@
 </p>
 
 <p>
-  <b>Wartość:</b>
+  <b>Ilość:</b>
   <%= @inventory_entry.amount %>
 </p>
 
 <p>
-  <b>Cena jednostkowa:</b>
-  <%= @inventory_entry.unit_price %>
+  <b>Wartość:</b>
+  <%= @inventory_entry.total_value %>
 </p>
 
 <p>
