--- a/app/views/shared/_journal_select.html.erb
+++ b/app/views/shared/_journal_select.html.erb
@@ -1,18 +1,18 @@
 <script type="text/javascript">
  function selectedUnitChanged(unitId) {
-   document.location.href = "<%= journals_path %>?unit_id=" + unitId.toString() + "&journal_type_id=<%= @journal.journal_type.id %>&year=<%= @journal.year %>";
+   document.location.href = "<%= journals_path %>?unit_id=" + unitId.toString() + "&journal_type_id=<%= @journal.journal_type.id %>&year=<%= session[:current_year] %>";
  }
  function selectedYearChanged(year) {
-   document.location.href = "<%= journals_path %>?unit_id=<%= @journal.unit.id %>&journal_type_id=<%= @journal.journal_type.id %>&year=" + year;
+   document.location.href = "<%= journals_path %>?unit_id=<%= session[:current_unit_id] %>&journal_type_id=<%= @journal.journal_type.id %>&year=" + year;
  }
 </script>
 <select onchange="selectedUnitChanged(this.value)" class="span4">
   <% @user_units.each do |unit| %>
-    <option value="<%= unit.id %>" <%= unit.id == @journal.unit.id ? "selected='selected'" : "" %>><%= unit.name %></option>
+    <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.name %></option>
   <% end %>
 </select>
 <select onchange="selectedYearChanged(this.value)" class="span1">
   <% @years.each do |year| %>
-    <option value="<%= year %>" <%= year == @journal.year ? "selected='selected'" : "" %>><%= year %></option>
+    <option value="<%= year %>" <%= year == session[:current_year] ? "selected='selected'" : "" %>><%= year %></option>
   <% end %>
 </select>
