[#49080953] Dodany wybór drużyny w książce inwentarzowej

--- a/app/views/inventory_entries/index.html.erb
+++ b/app/views/inventory_entries/index.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="span6">
     <div class="pull-right">
-      <%#= render "shared/journal_select" %>
+      <%= render "shared/inventory_entries_select" %>
     </div>
   </div>
 </div>
