[#49080953] Wpisy do książki inwentarzowej mogą być od teraz dodane jak przychód (+1) bądź rozchód (-1)

--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -47,4 +47,5 @@
     </div>
   </div>
   <%= f.hidden_field :unit_id, :value => @unit.id %>
+  <%= hidden_field_tag :is_expense, (params[:is_expense]) ? "1" : "" %>
 <% end %>
