[#49080953] Dodane pole is_expense do książki inwentarzowej dla uproszczenia kodu (zamiast *-1 dla rozchodu i *1 dla przychodu)

--- a/app/views/inventory_entries/edit.html.erb
+++ b/app/views/inventory_entries/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edycja wpisu inwentarzowego</h1>
+<h1><%= @inventory_entry.is_expense ? "Rozchód" : "Przychód" %> inwentarzowy</h1>
 
 <%= render 'form' %>
 
