--- a/app/views/inventory_entries/new.html.erb
+++ b/app/views/inventory_entries/new.html.erb
@@ -1,4 +1,8 @@
-<h1>Nowy wpis inwentarzowy</h1>
+<% if @inventory_entry.is_expense %>
+  <h1>Nowy rozchód</h1>
+<% else %>
+  <h1>Nowy przychód</h1>
+<% end %>
 
 <%= render 'form' %>
 
