--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -47,5 +47,5 @@
     </div>
   </div>
   <%= f.hidden_field :unit_id, :value => @unit.id %>
-  <%= hidden_field_tag :is_expense, (params[:is_expense]) ? "1" : "" %>
+  <%= f.hidden_field :is_expense, :value => @inventory_entry.is_expense %>
 <% end %>
