--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -1,17 +1,21 @@
 <div class="row top-buffer-40">
   <div class="span6">
-    <small>
-      <% if can? :update, @journal %>
-        <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => false) do%>
-          <button class="btn btn-small btn-primary" type="button"><i class="icon-plus"></i>&nbsp;&nbsp;Nowy wpływ</button>
+    <% if @journal.is_open? %>
+      <small>
+        <% if can? :update, @journal %>
+          <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => false) do%>
+            <button class="btn btn-small btn-primary" type="button"><i class="icon-plus"></i>&nbsp;&nbsp;Nowy wpływ</button>
+          <% end %>
         <% end %>
-      <% end %>
-      <% if can? :update, @journal %>
-        <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => true) do%>
-          <button class="btn btn-small btn-primary" type="button"><i class="icon-minus"></i>&nbsp;&nbsp;Nowy wydatek</button>
+        <% if can? :update, @journal %>
+          <%= link_to new_entry_path(:journal_id => @journal.id, :is_expense => true) do%>
+            <button class="btn btn-small btn-primary" type="button"><i class="icon-minus"></i>&nbsp;&nbsp;Nowy wydatek</button>
+          <% end %>
         <% end %>
-      <% end %>
-    </small>
+      </small>
+    <% else %>
+      <span class="label label-important">Książka zamknięta</span>
+    <% end %>
   </div>
   <div class="span6">
     <div class="pull-right">
