--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,33 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2><%= t "devise.registrations.edit.header" %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="field">
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+  </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+  <div class="field">
+    <%= f.label :password %> <i><%= t "devise.registrations.edit.new_password_info" %></i><br/>
+    <%= f.password_field :password, :autocomplete => "off" %>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="field">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <div class="field">
+    <%= f.label :current_password %> <i><%= t "devise.registrations.edit.current_password_info" %></i><br/>
+    <%= f.password_field :current_password %>
+  </div>
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit t "devise.registrations.edit.submit_button" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3><%= t "devise.registrations.edit.delete_account_header" %></h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+<p><%= t "devise.registrations.edit.delete_account_info" %> <%= link_to t("devise.registrations.edit.delete_account"), registration_path(resource_name), :confirm => "Na pewno?", :method => :delete %>.</p>
 
 <%= link_to "Back", :back %>
