--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -27,7 +27,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.email %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li class="disabled"><a href="#"><i class='icon-wrench'></i>&nbsp;&nbsp;&nbsp;Zmień hasło</a></li>
+            <li><%= link_to edit_user_registration_path do %><i class='icon-wrench'></i>&nbsp;&nbsp;&nbsp;Ustawienia konta<%end%></li>
             <li><%= link_to destroy_user_session_path, :method => :delete do %><i class='icon-off'></i>&nbsp;&nbsp;&nbsp;Wyloguj się <%end%></li>
           </ul>
         </li>
