Obniżenie paska z menu

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar" id="navbar">
   <div class="navbar-inner">
     <ul class="nav">
       <li class=""><%= link_to root_path do %> <i class='icon-home'></i> ZiHeR <% end %></li>
